--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,8 +3,11 @@ eclipse.project.name = appName + '-core'
 
 dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  implementation 'com.badlogicgames.gdx:gdx:1.12.0'
+  implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'org.json:json:20230227'
 
-  if(enableGraalNative == 'true') {
+  if (enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
 }
