--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,6 +6,8 @@ dependencies {
   implementation 'com.badlogicgames.gdx:gdx:1.12.0'
   implementation 'com.google.code.gson:gson:2.10.1'
   implementation 'org.json:json:20230227'
+  implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+
 
   if (enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
